# evlab

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
src/evlab/: __init__.py  cli.py  corrupt.py  features.py  filters.py  formats.py  metrics.py  representations.py  server.py  synth.py  viz.py
src/evlab/static/: index.html
tests/: test_corrupt.py  test_evlab.py  test_features.py  test_formats_extra.py  test_server.py
